# mission-planning

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README_WEBAPP.md  pyproject.toml  run_dev.sh
.github/workflows/: ci.yml
.windsurf/rules/: audit-findings.md  backend.md  domain.md  dx.md  frontend.md  global.md  testing.md
artifacts/demo/: RESHUFFLE_EXPLAINER.json  RESHUFFLE_EXPLAINER.md
backend/: _paths.py  auto_mode_selection.py  config_manager.py  config_resolver.py  conflict_detection.py  coordinate_parser.py  czml_generator.py  incremental_planning.py  main.py  mission_settings_manager.py  order_materialization.py  planning_demands.py  policy_engine.py  reshuffle_explainer.py  sar_czml.py  satellite_manager.py  schedule_persistence.py  scheduling_mode.py  security.py  time_windows.py  workspace_persistence.py
config/: batch_policies.yaml  ground_stations.yaml  mission_settings.yaml  sar_modes.yaml  satellites.yaml
data/: active_satellites.tle  workspaces.db
docs/: API_SURFACE_USED_BY_UI.md  AUDIT_MISSION_PLANNER_READINESS.md  AUDIT_PERSISTENT_SCHEDULING_HISTORY.md  AUDIT_SAR_PLANNING_INTEGRATION.md  AUDIT_UI_SAR_PARITY.md  CESIUM_ENTITY_ID_CONTRACT.md  CONFIG_GOVERNANCE_IMPLEMENTATION.md  CONFLICT_DETECTION.md  ENGINEERING_OVERVIEW.md  INCREMENTAL_PLANNING.md  MISSION_PLANNING_GUIDE.md  PARAMETER_GOVERNANCE_MATRIX.md  PARAMETER_GOVERNANCE_RULES.md  PERSISTENT_SCHEDULING.md  PR-PS2.4-Interactive-Locks-WhatIf-Commit.md  PR_COMMIT_PREVIEW_01_CHECKLIST.md  PR_CONFLICT_UX_01_CHECKLIST.md  PR_CONFLICT_UX_02_CHECKLIST.md  PR_E2E_002_CHECKLIST.md  PR_E2E_005_CHECKLIST.md  PR_LOCK_OPS_01_CHECKLIST.md  PR_MAP_HIGHLIGHT_01_CHECKLIST.md  PR_OPS_REPAIR_DEFAULT_01.md  PR_OPS_REPAIR_EXPLAIN_01_CHECKLIST.md  PR_OPS_REPAIR_REPORT_01_CHECKLIST.md  PR_PARAM_GOV_01_CHECKLIST.md  PR_REPAIR_UX_01_CHECKLIST.md  PR_SAR_SWATH_CANVAS_HARDENING.md  PR_SCHED_001_CHECKLIST.md  PR_SCHED_002_CHECKLIST.md  PR_SCHED_003_CHECKLIST.md  PR_SCHED_004_CHECKLIST.md  PR_SCHED_005_CHECKLIST.md  PR_SCHED_006_CHECKLIST.md  PR_SCHED_007_CHECKLIST.md  PR_SCHED_008_CHECKLIST.md  PR_SCHED_009_CHECKLIST.md  PR_SCHED_010_CHECKLIST.md  PR_SCHED_011_CHECKLIST.md  PR_SCHED_012_CHECKLIST.md  (+49 more)
examples/: Access_direct_sun.csv  Access_no_constraint.csv  Day2-Extras.kml  Polygon.kml  TargetPoints.kml  advanced_visualization.py  aoi-export-2026-03-26T13_23_18.740Z.kml  basic_mission_planning.py  cli_demo.py  compare_gulf_kml.py  generate_gulf_kml.py  verify_arabian_gulf.py
frontend/: .env.example  .eslintrc.json  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
scenarios/: sar_any_lookside_choice.json  sar_asc_desc_filter.json  sar_incidence_range_clip.json  sar_left_right_basic.json  sar_multisat_stress.json  sar_planning_metadata.json
scripts/: README.md  audit_algorithms.py  quick_test_parallel.py  release_gate.sh  run_frontend_audit.py  run_planning_audit.py  seed_demo_workspace.py  start_webapp.py  terminal_v0.2.js  test_api_sweep.py  test_repair_e2e_v2.py
tests/: conftest.py  temp_test_memory.tle
(+524 files in other folders)
